@@ -55,12 +55,6 @@
         note = {\url{http://www.mathworks.com/}},
 }
 
-@misc{www:Tecplot,
-        title = {Tecplot},
-        year = {2005},
-        note = {\url{http://www.tecplot.com/}},
-}
-
 @misc{www:GiD,
         title = {Gi{D}},
         year = {2005},
