@@ -6,10 +6,9 @@ nobase_include_HEADERS  = dolfin/dolfin_io.h \
                           dolfin/MatlabFile.h \
                           dolfin/MFile.h \
                           dolfin/MTXFile.h \
-	                  dolfin/OctaveFile.h \
+                          dolfin/OctaveFile.h \
                           dolfin/OpenDXFile.h \
                           dolfin/PythonFile.h \
-                          dolfin/TecplotFile.h \
                           dolfin/VTKFile.h \
                           dolfin/XMLBLASFormData.h \
                           dolfin/XMLFile.h \
@@ -31,7 +30,6 @@ libdolfin_io_la_SOURCES = File.cpp \
                           OctaveFile.cpp \
                           OpenDXFile.cpp \
                           PythonFile.cpp \
-                          TecplotFile.cpp \
                           VTKFile.cpp \
                           XMLBLASFormData.cpp \
                           XMLFile.cpp \
